--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ python:
     - "3.4"
 install: "pip3 install -r requirements.txt"
 script:
-- SECRET_KEY="whatver" manage.py test     
+- SECRET_KEY="whatver" ./manage.py test     
